[package]
name = "schlandals"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc-hash = "1.1.0"
clap = { version = "3.0.0-beta.4", features = ["derive"] }
assert_float_eq = "1.1.3"
rand = "0.8.5"
nalgebra = "0.31.4"
rug = { version = "1.18.0", features = ["float", "integer"] }

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "benchmarks"
harness = false