[package]
name = "schlandals"
version = "0.1.2"
edition = "2021"

authors = ["Alexandre Dubray <alexandre.dubray@uclouvain.be>"]
readme = "README.md"
repository = "https://github.com/aia-uclouvain/schlandals"
description = "A tool for probabilistic inference by projected weighted model counting."
license = "AGPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc-hash = ">=1.1.0"
clap = { version = ">=4.4.7", features = ["derive"] }
assert_float_eq = ">=1.1.3"
rand = ">=0.8.5"
rand_chacha = "0.3.1"
nalgebra = ">=0.31.4"
rug = { version = ">=1.18.0", features = ["float", "integer"] }
sysinfo = ">=0.28.1"
search_trail = ">=0.1.2"
peak_alloc = ">=0.2.0"
chrono = ">=0.4.31"
rayon = ">=1.8.0"
bitvec = ">=1.0.1"
tch = { version = ">=0.14.0", optional = true }

[dev-dependencies]
paste = "1.0.12"
tempfile = "3"

[features]
tensor = ["dep:tch"]
