[package]
name = "pyschlandals"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyschlandals"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.19.0"
schlandals = {version = "0.1.0", path = ".."}
rug = { version = "1.18.0", features = ["float"] }
